Hair Dynamics: Hair quality steps more than 1 results in increased collision reaction [like a multiplier] #65038

Closed
opened 2019-05-23 17:34:58 +02:00 by Niko Maisuradze · 7 comments

System Information
Operating system: Windows-8-6.2.9200-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.71

Blender Version
Broken: version: 2.80 (sub 71), branch: blender2.7, commit date: 2019-05-22 00:34, hash: 0f98c05c8b
Worked: 2.79 latest daily, and official.

Short description of error
In a hair simulation, if quality steps are more than 1, hair collision doesn't work. Hair moves in random directions.

Exact steps for others to reproduce the error
Add plane, add hair particles to it. Add any collision object. Press play. As default quality steps is 5, hair collision wont work.

I know the whole particles physics thing is being reworked, but it would be great if this annoying bug could be fix till then.

**System Information** Operating system: Windows-8-6.2.9200-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.71 **Blender Version** Broken: version: 2.80 (sub 71), branch: blender2.7, commit date: 2019-05-22 00:34, hash: `0f98c05c8b` Worked: 2.79 latest daily, and official. **Short description of error** In a hair simulation, if quality steps are more than 1, hair collision doesn't work. Hair moves in random directions. **Exact steps for others to reproduce the error** Add plane, add hair particles to it. Add any collision object. Press play. As default quality steps is 5, hair collision wont work. I know the whole particles physics thing is being reworked, but it would be great if this annoying bug could be fix till then.

Added subscriber: @NikoMaisuradze

Added subscriber: @NikoMaisuradze

Added subscriber: @ZedDB

Added subscriber: @ZedDB

This comment was removed by @ZedDB

*This comment was removed by @ZedDB*
Luca Rood was assigned by Sebastian Parborg 2019-06-12 17:30:08 +02:00
Philipp Oeser changed title from Hair quality steps more than 1 results in hair random motion on collision to Hair Dynamics: Hair quality steps more than 1 results in hair random motion on collision 2019-09-04 11:51:27 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Qualitiy Steps seems to act as some sort of multiplier on the collision force [bad].

T65038_279.blend
Just open the file in 2.79 and 2.8, with Quality Steps = 1 these have comparable results, increasing Qualitiy Steps will also increase collision reaction in 2.8 [not in 2.79]

`Qualitiy Steps` seems to act as some sort of multiplier on the collision force [bad]. [T65038_279.blend](https://archive.blender.org/developer/F7716186/T65038_279.blend) Just open the file in 2.79 and 2.8, with `Quality Steps` = 1 these have comparable results, increasing `Qualitiy Steps` will also increase collision reaction in 2.8 [not in 2.79]
Philipp Oeser changed title from Hair Dynamics: Hair quality steps more than 1 results in hair random motion on collision to Hair Dynamics: Hair quality steps more than 1 results in increased collision reaction [like a multiplier] 2019-09-04 12:07:49 +02:00

This issue was referenced by e52ad1835a

This issue was referenced by e52ad1835a6aaefab389b173728b9bb7ef2e754a
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65038
No description provided.